--- a/manifest.json
+++ b/manifest.json
@@ -10,13 +10,13 @@
   "scope": "./",
   "icons": [
     {
-      "src": "https://via.placeholder.com/192/667eea/ffffff?text=拼豆",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "https://via.placeholder.com/512/667eea/ffffff?text=拼豆",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
